# platformer-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: App.hpp  Game.hpp  Painter.hpp  StartMenu.hpp
src/: App.cpp  Painter.cpp  StartMenu.cpp  main.cpp
